force-app/main/default/objects/Event__c/fields/number_of_Registered_attendees__c.field-meta.xml
<CustomField>
    <fullName>number_of_Registered_attendees__c</fullName>
    <label>number of Registered attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>