force-app/main/default/objects/Event__c/recordTypes/In_Person_Event.recordType-meta.xml
<RecordType>
    <fullName>In_Person_Event</fullName>
    <active>true</active>
    <label>In-Person Event</label>
</RecordType>