force-app/main/default/objects/Event__c/validationRules/Event_Date_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Date_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Event_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Ensure the Event Date is in the future.</errorMessage>
</ValidationRule>