force-app/main/default/objects/Event__c/validationRules/Max_Attendees_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Attendees_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>number_of_Registered_attendees__c  &gt; Maximum_Attendees__c</errorConditionFormula>
    <errorDisplayField>number_of_Registered_attendees__c</errorDisplayField>
    <errorMessage>The number of attendees cannot exceed the maximum allowed for this event</errorMessage>
</ValidationRule>